# SIT-AUTO

./: .gitignore  README.md  pyproject.toml  requirements-controller.txt
TestController/: DefaultControllerSettings.yaml  StartController.py  __init__.py
TestController/Commands/: __init__.py  parse_results.py  run_linux_suite.py  run_master_suite.py  run_plan.py  validate_platform.py
TestController/Libraries/: __init__.py  controller_lib.py  plan_lib.py
TestController/References/: Version.txt
TestController/TestSuites/: controller_smoke.yaml  linux_power_cycle.yaml  linux_regression.yaml  linux_smoke.yaml  linux_toolkit_tools.yaml
TestController/UserFiles/Plans/: local_trial.yaml  plan_template.yaml
TestController/UserFiles/ServerLists/: json_template.json  linux_template.yaml  local_demo.yaml  local_dual_demo.yaml
TestControllerUserFiles/Plans/: local_trial.yaml  plan_template.yaml
TestControllerUserFiles/ServerLists/: json_template.json  linux_template.yaml  local_json_demo.json
Toolkit/: StartToolkit.py  __init__.py  invoke_remote.py
Toolkit/Libraries/: __init__.py  toolkit_lib.py
Toolkit/Settings/: user-settings.json
Toolkit/UserFiles/: README.md
Toolkit/UserFiles/tests/: smoke_system_check.sh  storage_inventory_check.sh
ToolkitSettings/: user-settings.json
ToolkitUserFiles/: README.md
_archive/legacy_web_scaffold/: README.md
_references/: README.md
docs/: LINUX_QUICKSTART.md  SIT-AUTO使用手册.md  VERSION_DIFF_NOTES.md
scripts/: bootstrap_controller_linux.sh  build_target_bundle.ps1
tests/: test_controller_platform.py
(+2 files in other folders)
