[project]
name = "sit-auto-linux-platform"
version = "0.2.0"
description = "Linux-oriented automation platform inspired by the legacy Test Controller + Toolkit model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2,<7.0.0",
    "paramiko>=3.5.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["TestController*", "Toolkit*"]
